--- a/index.html
+++ b/index.html
@@ -19,16 +19,12 @@
     <title>Superstelia</title>
   </head>
 
-  <body style="background-image: url(../src/styles/img/image8.png)">
+  <body style="background-image: url(./img/image8.png)">
     <header>
       <div class="modal" id="modal">
         <div class="menu" id="menu">
           <div class="menu__close" id="button_close">
-            <img
-              src="../src/styles/img/close.png"
-              alt=""
-              onclick="closeMenu()"
-            />
+            <img src="./img/close.png" alt="" onclick="closeMenu()" />
           </div>
           <div class="menu__main">
             <h3 class="menu__main-text" onclick="closeMenu()">
@@ -55,7 +51,7 @@
           <div class="menu__footer">
             <div class="menu__footer-item">
               <div>
-                <img src="../src/styles/img/phone.png" alt="" />
+                <img src="./img/phone.png" alt="" />
               </div>
               <h3 class="menu__footer-text">
                 <a href="tel:+380954573956"> +38 (095) 457-39-56</a>
@@ -63,7 +59,7 @@
             </div>
             <div class="menu__footer-item">
               <div>
-                <img src="../src/styles/img/instagram.png" alt="" />
+                <img src="./img/instagram.png" alt="" />
               </div>
               <h3 class="menu__footer-text">
                 <a href="https://www.instagram.com/superstelya777/">
@@ -75,8 +71,8 @@
         </div>
       </div>
       <div class="header__div">
-        <img src="../src/styles/img/logo.png" class="header__logo" />
-        <img src="../src/styles/img/phone.png" class="header__phone" />
+        <img src="./img/logo.png" class="header__logo" />
+        <img src="./img/phone.png" class="header__phone" />
         <p class="header__phonenumber">
           <a
             href="tel:+380954573956"
@@ -85,7 +81,7 @@
           >
         </p>
         <img
-          src="../src/styles/img/lines.png"
+          src="./img/lines.png"
           class="header__lines"
           id="button_open"
           onclick="showMenu()"
@@ -120,7 +116,7 @@
           <ul class="">
             <li onclick="showPhotoFirst()" class="chapter__list__item">
               <img
-                src="../src/styles/img/list.gif"
+                src="./img/list.gif"
                 id="listFirstImage"
                 class="chapter__list__item-image"
               />
@@ -129,37 +125,37 @@
               </p>
             </li>
             <div class="chapter__list__item-active-first" id="listFirst">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoSecond()">
-              <img src="../src/styles/img/list.gif" id="listSecondImage" />
+              <img src="./img/list.gif" id="listSecondImage" />
               <p class="chapter__list__item-text" id="listSecondText">
                 Резинова заглушка
               </p>
             </li>
             <div class="chapter__list__item-active-second" id="listSecond">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoThird()">
-              <img src="../src/styles/img/list.gif" id="listThirdImage" />
+              <img src="./img/list.gif" id="listThirdImage" />
               <p class="chapter__list__item-text" id="listThirdText">
                 Безвставочний
               </p>
             </li>
             <div class="chapter__list__item-active-third" id="listThird">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
 
             <li onclick="showPhotoFourth()">
-              <img src="../src/styles/img/list.gif" id="listFourthImage" />
+              <img src="./img/list.gif" id="listFourthImage" />
               <p class="chapter__list__item-text" id="listFourthText">
                 Парящий
               </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listFourth">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
           </ul>
         </div>
@@ -174,31 +170,31 @@
         <div class="chapter__list">
           <ul class="">
             <li class="chapter__list__item" onclick="showPhotoFifth()">
-              <img src="../src/styles/img/list.gif" id="listFifthImage" />
+              <img src="./img/list.gif" id="listFifthImage" />
               <p class="chapter__list__item-text" id="listFifthText">
                 Трекові системи
               </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listFifth">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
             <li onclick="showPhotoSixth()">
-              <img src="../src/styles/img/list.gif" id="listSixthImage" />
+              <img src="./img/list.gif" id="listSixthImage" />
               <p class="chapter__list__item-text" id="listSixthText">
                 Весь спектр люстр <br />та світильників
               </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listSixth">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
             <li onclick="showPhotoSeventh()">
-              <img src="../src/styles/img/list.gif" id="listSeventhImage" />
+              <img src="./img/list.gif" id="listSeventhImage" />
               <p class="chapter__list__item-text" id="listSeventhText">
                 Лінійне освітлення
               </p>
             </li>
             <div class="chapter__list__item-active-fourth" id="listSeventh">
-              <img src="../src/styles/img/photo_2023-06-28 16.30.png" />
+              <img src="./img/photo_2023-06-28 16.30.png" />
             </div>
           </ul>
         </div>
@@ -232,27 +228,27 @@
             <ul class="chapter__list-box-horizontal">
               <li class="chapter__list__item-horizontal">
                 <img
-                  src="../src/styles/img/truth.png"
+                  src="./img/truth.png"
                   class="chapter__list__item-horizontal-img"
                 />
                 <p class="chapter__list__item-text">Чесність</p>
               </li>
               <li class="chapter__list__item-horizontal">
                 <img
-                  src="../src/styles/img/clean.png"
+                  src="./img/clean.png"
                   class="chapter__list__item-horizontal-img"
                 />
                 <p class="chapter__list__item-text">Чистота</p>
               </li>
               <li class="chapter__list__item-horizontal" style="margin: 0">
                 <img
-                  src="../src/styles/img/modern.png"
+                  src="./img/modern.png"
                   class="chapter__list__item-horizontal-img"
                 />
                 <p class="chapter__list__item-text">Сучасність</p>
               </li>
             </ul>
-            <img src="../src/styles/img/Andrew.png" />
+            <img src="./img/Andrew.png" />
           </div>
         </div>
       </div>
@@ -273,14 +269,14 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="../src/styles/img/call.png" />
+              <img src="./img/call.png" />
               <span class="card__item-title">Дзвінок</span>
             </div>
             <p class="card__item-text">
               Отримуємо від Вас дзвінок та домовляємось про зустріч та заміри
             </p>
           </div>
-          <img src="../src/styles/img/image%209.png" class="card-image" />
+          <img src="./img/image%209.png" class="card-image" />
         </div>
       </div>
 
@@ -300,7 +296,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="../src/styles/img/pencil.png" />
+              <img src="./img/pencil.png" />
               <span class="card__item-title">Заміри</span>
             </div>
             <p class="card__item-text">
@@ -309,7 +305,7 @@
               побажання
             </p>
           </div>
-          <img class="card-image" src="../src/styles/img/image%2012.png" />
+          <img class="card-image" src="./img/image%2012.png" />
         </div>
       </div>
 
@@ -330,7 +326,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="../src/styles/img/instruments.png" />
+              <img src="./img/instruments.png" />
               <span class="card__item-title">Монтаж</span>
             </div>
             <p class="card__item-text">
@@ -339,7 +335,7 @@
               вас
             </p>
           </div>
-          <img class="card-image" src="../src/styles/img/image%2011.png" />
+          <img class="card-image" src="./img/image%2011.png" />
         </div>
       </div>
 
@@ -360,7 +356,7 @@
         <div class="card-box">
           <div class="card__item">
             <div class="card__item-box">
-              <img src="../src/styles/img/result.png" />
+              <img src="./img/result.png" />
               <span class="card__item-title">Результат</span>
             </div>
             <p class="card__item-text">
@@ -368,7 +364,7 @@
               "сюрпризів"
             </p>
           </div>
-          <img class="card-image" src="../src/styles/img/image%2010.png" />
+          <img class="card-image" src="./img/image%2010.png" />
         </div>
       </div>
 
@@ -385,11 +381,11 @@
       <div class="chapter" style="display: block">
         <div class="chapter__list-box-horizontal">
           <img
-            src="../src/styles/img/left.png"
+            src="./img/left.png"
             style="margin-right: 20px"
             class="previous-btn"
           />
-          <img src="../src/styles/img/right.png" class="next-btn" />
+          <img src="./img/right.png" class="next-btn" />
         </div>
       </div>
 
@@ -398,7 +394,7 @@
           <div class="slider__item">
             <img
               class="../src/slider__item-photo"
-              src="../src/styles/img/sliderPhoto1.png"
+              src="./img/sliderPhoto1.png"
             />
             <div style="margin: 33px">
               <span class="slider__item-name">
@@ -414,10 +410,7 @@
           </div>
 
           <div class="slider__item">
-            <img
-              class="slider__item-photo"
-              src="../src/styles/img/sliderPhoto1.png"
-            />
+            <img class="slider__item-photo" src="./img/sliderPhoto1.png" />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -432,10 +425,7 @@
           </div>
 
           <div class="slider__item">
-            <img
-              class="slider__item-photo"
-              src="../src/styles/img/sliderPhoto1.png"
-            />
+            <img class="slider__item-photo" src="./img/sliderPhoto1.png" />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -450,10 +440,7 @@
           </div>
 
           <div class="slider__item">
-            <img
-              class="slider__item-photo"
-              src="../src/styles/img/sliderPhoto1.png"
-            />
+            <img class="slider__item-photo" src="./img/sliderPhoto1.png" />
             <div style="margin: 33px">
               <span class="slider__item-name">
                 Збір всієї необхідної супровідної вантаж документації,
@@ -475,14 +462,14 @@
         <h2 class="footer__name">Контакти</h2>
         <ul class="footer__link">
           <li class="footer__link-phone">
-            <img src="../src/styles/img/phone.png" /><a
+            <img src="./img/phone.png" /><a
               href="tel:+380954573956"
               style="color: white; text-decoration: none"
               >+38 (095) 457-39-56</a
             >
           </li>
           <li class="footer__link-instagram">
-            <img src="../src/styles/img/instagram.png" /><a
+            <img src="./img/instagram.png" /><a
               href="https://www.instagram.com/superstelya777/"
               style="color: white; text-decoration: none"
               >superstelya777</a
@@ -490,7 +477,7 @@
           </li>
         </ul>
         <img
-          src="../src/styles/img/up.png"
+          src="./img/up.png"
           class="footer__button"
           onclick="scrollToTop()"
         />
